apps/authelia/overlays/nishir/patch-pvc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authelia
spec:
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        resources:
          requests:
            storage: 512Mi
        storageClassName: nishir-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
