apps/authelia/overlays/nishir/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
spec:
  hostnames:
    - authelia.i.shikanime.studio
    - accounts.i.shikanime.studio
  parentRefs:
    - name: authelia
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia-redirect
spec:
  hostnames:
    - authelia.i.shikanime.studio
  parentRefs:
    - name: authelia
      sectionName: http
